# esp32s3_javascript_python-server

./: .gitignore
08_lvgl_Porting/: conclusion.md  requirements.txt  sdkconfig.defaults
08_lvgl_Porting/docs/: ESP32-S3-Touch-LCD-7B_引脚与外设说明.md
08_lvgl_Porting/main/: CMakeLists.txt  idf_component.yml  main.c
08_lvgl_Porting/main/http_client/: http_client.c  http_client.h
08_lvgl_Porting/main/infrared/: infrared.c  infrared.h
08_lvgl_Porting/main/pn532/: pn532_app.c  pn532_app.h
08_lvgl_Porting/main/ui/: chinese.md  library_ui.c  library_ui.h  ui_borrow.c  ui_borrow.h  ui_common.c  ui_common.h  ui_floor_map_assets.c  ui_login.c  ui_login.h  ui_map.c  ui_map.h  ui_qr_login.c  ui_qr_login.h  ui_rfid.c  ui_rfid.h  ui_search.c  ui_search.h  ui_wifi.c  ui_wifi.h  user_session.c  user_session.h
08_lvgl_Porting/main/wave_rgb_lcd/: waveshare_esp32_s3_rgb_lcd_init.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
08_lvgl_Porting/main/wifi/: wifi_config.c  wifi_config.h
08_lvgl_Porting/templates/: login.html
graduate_website_final/: conclusion.md  index.html  script.js  server.py
graduate_website_final/css/: admin.css  base.css  borrow.css  help.css  login.css  menu.css  navigation.css  profile.css  return.css  search.css  self-service.css  welcome.css
graduate_website_final/docs/: 扫码登录对接说明.md  用户端功能说明（论文用）.md  管理员端功能说明（论文用）.md
graduate_website_final/js/: admin.js  api.js  app-state.js  auth.js  borrow.js  features.js  help.js  main.js  navigation.js  notification.js  page-manager.js  profile.js  return.js  search.js  system.js  (+1 more)
module/: 微雪触摸屏7寸产品资料.txt
(+35 files in other folders)
